Fix Attribute Fiter count misalignment (https://github.com/woocommerce/woocommerce-blocks/pull/1391)

--- a/plugins/woocommerce-blocks/assets/js/blocks/attribute-filter/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/attribute-filter/style.scss
@@ -16,7 +16,10 @@
 		li {
 			text-decoration: underline;
 
-			label,
+			label {
+				cursor: pointer;
+			}
+
 			input {
 				cursor: pointer;
 				display: inline-block;
